# Nia_the_sales_assistant

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  FRONTEND_TESTING.md  GEMINI_QUOTA_IMPLEMENTATION.md  IMPLEMENTATION_STATUS_REPORT.md  PROJECT_STATUS.md  README.md  TASK_2_IMPLEMENTATION_SUMMARY.md  TASK_8_IMPLEMENTATION_SUMMARY.md  TASK_9_IMPLEMENTATION_SUMMARY.md  UPDATED_TASK_STRUCTURE_WITH_INTELLIGENT_COMMUNICATION.md  VOICE_SERVICE_IMPLEMENTATION_SUMMARY.md  credentials.py.example  debug_frontend_500.py  debug_frontend_issue.py  docker-compose.yml  manage.py  pyproject.toml  quick_functionality_test.py  requirements.txt  restart_server.py  run_frontend_tests.py  simple_test.py  test_ai_api.py  test_api.py  test_api_endpoints.py  test_api_recommendations.py  test_create_lead_issue.py  test_django_api.py  test_enhanced_lead_interface.py  test_frontend_api.py  test_frontend_interface.py  test_frontend_manual.html  test_gemini.py  test_gemini_api_integration.py  test_lead_extraction.py  test_opportunity_conversion_api.py  test_opportunity_conversion_functionality.py  test_pattern_extraction.py  (+3 more)
admin_config/: __init__.py  admin.py  admin_views.py  admin_views_simple.py  apps.py  models.py  serializers.py  services.py  services_minimal.py  signals.py  urls.py  views.py
admin_config/migrations/: 0001_initial.py
ai_service/: admin.py  ai_config.py  ai_context_guidelines.py  models.py  quota_tracker.py  serializers.py  services.py  tasks.py  test_gemini_integration.py  test_lead_management.py  test_opportunity_conversion.py  test_recommendations.py  tests.py  urls.py  views.py
ai_service/migrations/: 0001_initial.py  0002_initial.py  0003_lead_aiinsights_lead_ai_service__user_id_c89d44_idx_and_more.py  0004_opportunity_aiinsights_conversion_readiness_factors_and_more.py  0005_remove_opportunityintelligence_opportunity_and_more.py
api_testing/: __init__.py  models.py
cleanup_scripts/: __init__.py  cleanup_logger.py  cleanup_plan.md  current_project_structure.json  current_structure_documentation.py  current_structure_summary.md  prepare_cleanup.py  validation_scripts.py
config/: __init__.py
docs/: CLEANUP_COMPLETION_SUMMARY.md  CONVERSATION_WORKFLOW.md  DEVELOPER_ONBOARDING.md  FRONTEND_TESTING.md  MAINTENANCE_PRACTICES.md  NIA_MEETING_INTEGRATION_TASKS.md  README.md  UPDATED_TASK_STRUCTURE.md
docs/implementation/: CALENDAR_INTEGRATION_IMPLEMENTATION_SUMMARY.md  CLEANUP_AND_CREDENTIALS_SUMMARY.md  CLEANUP_SUMMARY.md  MEETING_OUTCOME_TRACKING_IMPLEMENTATION_SUMMARY.md  PRE_MEETING_INTELLIGENCE_IMPLEMENTATION_SUMMARY.md  TASK_10_OPPORTUNITY_CONVERSION_INTELLIGENCE_SUMMARY.md  TASK_2_IMPLEMENTATION_SUMMARY.md  TASK_3_IMPLEMENTATION_SUMMARY.md
docs/setup/: AI_CONTEXT_GUIDELINES_DOCUMENTATION.md  SECURITY_NOTES.md  configuration_guide.md  docker_configuration.md  environment_variables.md
docs/testing/: test_structure_guide.md
meeting_service/: admin.py  apps.py  calendar_admin.py  calendar_integration_service.py  calendar_views.py  dashboard_views.py  google_meet_service.py  intelligent_meeting_service.py  live_meeting_support.py  meeting_outcome_service.py  microsoft_teams_service.py  models.py  nia_meeting_scheduler.py  pre_meeting_intelligence.py  question_service.py  serializers.py  tests.py  urls.py  video_platform_service.py  views.py
nia_sales_assistant/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: README.md
templates/: index.html
tests/: conftest.py
users/: admin.py  models.py
voice_service/: admin.py  apps.py  chat_consumers.py  chat_models.py  chat_views.py  consumers.py  models.py  routing.py  services.py  test_integration.py  tests.py  urls.py  views.py
(+114 files in other folders)
